# scraper-pipeline

./: .dockerignore  .gitignore  README.md  config.conf  extract_googleai.py  extract_layoutlm.py  extract_textract.py  main.py  proxies.py  pyproject.toml  scrape_stocks.py  scraper.py  screenshot.py  screenshots.py  status.py
.githooks/: pre-push
.github/workflows/: deploy.yml
doc/: cicd.md  local-setup.md  prod-deployment.md  references.md  security.md  todo.md
infra/: .env.example  Dockerfile  docker-compose.yml
input/sql-schema/: v1.sql
input/templates/: acoes-br.xlsx  fiis-br.xlsx
resources/sql-schema/: migrate.sql  schema.sql  seed_data.sql  v1.sql
src/: active_pipes.py  config.py  main.py  migrate_db.py  prune.sh  scheduler.py  scraper.py  status.py
src/api/: api.py  schema.py  schemas.py
src/api/metadata/: labels.py  schema.py  sources.py
src/common/: config.py  extract_data.py  logs.py  repository.py  screenshot.py  spreadsheet.py  util.py  validate_data.py  validate_screenshot.py
src/common/services/: data.py  ipc_signal.py  repository.py
src/common/util/: date_util.py  dict_util.py
src/core/: browser_session.py  config.py  extraction.py  google_sheets.py  logs.py  normalization.py  paths.py  progress.py  proxies.py  scheduler.py  screenshot.py  screenshot_validator.py  tasks.py  util.py  validation.py
src/flows/: b3idiv.py  generic_extract.py  generic_screenshot.py  generic_screenshot_validate.py  image_extract.py  investidor10.py  simplywall-single.py  simplywall.py  simplywall_multi.py  statusinvest.py  tipranks.py  tradingview.py  yahoo.py
src/pipelines/: __init__.py  b3_positions.py  b3idiv.py  fundamentus_fiis.py  investidor10.py  simplywall.py  simplywall_multi.py  statusinvest.py  statusinvest_carteira_xlsx.py  tipranks.py  tradingview.py  yahoo.py  yahoo_chart.py  yahoo_recomendations.py  yahoo_recommendations.py
src/scraper/: active_pipes.py  migrate_db.py  scraper.py  status.py
src/services/: browser.py  firestore.py  google_sheets.py  llm.py  ocr.py  proxies.py  repository.py
src/spreadsheet/: __init__.py  acoes_br.py  fiis_br.py  screening_sheet.py
src/stocks/: download_statusinvest.py  flow_yahoo.py  image_scrape.py  screening_sheet.py  screenshots.py  statusinvest.py  stocks_image_scrape.py  stocks_image_validate.py  stocks_screenshot.py  ticker_screenshot.py  yahoo.py
(+66 files in other folders)
