[project]
name = "stocks-scraper"
version = "0.1"
requires-python = ">=3.13,<4.0"
dependencies = [
    "playwright (>=1.52.0,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "pyhocon (>=0.3.61,<0.4.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "google-cloud-firestore (>=2.21.0,<3.0.0)",
]