[project]
name = "stocks-scraper"
version = "0.1.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "playwright>=1.52.0,<2.0.0",
    "google-generativeai>=0.8.5,<0.9.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "yfinance>=0.2.65,<0.3.0",
    "pillow>=11.3.0,<12.0.0",
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn>=0.35.0,<0.36.0",
    "cachetools>=2.0.0,<6.0",
    "openpyxl>=3.1.5,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.12",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
extend-ignore = [
    "F403",  # no import *
    "F405",  # names coming from import * may be undefined
    "E731",  # no lambda
    "E722",  # no bare except
]

[tool.ruff.format]
quote-style = "double"